sitne izmene oko home komponente, logout btn

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
 <div>
+  <h2 class="text-center">Pregled korisnika</h2>
   <small
-    >Your roles: <i>{{ currentRoles }}</i></small
+    >Vase privilegije: <i>{{ currentRoles }}</i></small
   >
   <br />
   <hr />
@@ -65,4 +66,8 @@
   >
     Dodaj korisnika
   </button>
+  <button class="btn btn-outline-danger" style="float: right;" (click)="logOut()">Log out</button>
+  <br>
+  <br>
+  
 </div>
